fixing footer size on mobile

--- a/2017/10/housing-guide/css/style.css
+++ b/2017/10/housing-guide/css/style.css
@@ -1009,7 +1009,7 @@ svg {
 
 	.footer-flex-container {
 		display: block;
-		height: 400px;
+		height: 500px;
 	}
 	.footer-flex-item {
     	width: 100%;
